[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/OnGameHud.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Joystick.tscn" type="PackedScene" id=9]

[node name="OGH" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 7 )]
margin_left = 821.247
margin_top = 826.784
margin_right = 821.247
margin_bottom = 826.784
rect_scale = Vector2( 3.03063, 3.03063 )

[node name="Saltar" parent="." instance=ExtResource( 8 )]
position = Vector2( 1958.67, 899.484 )
scale = Vector2( 1.5, 1.5 )

[node name="Disparar" parent="." instance=ExtResource( 8 )]
position = Vector2( 1720.67, 899.484 )
scale = Vector2( 1.5, 1.5 )
tipo = 1

[node name="Action" parent="." instance=ExtResource( 8 )]
position = Vector2( 1838.67, 727.484 )
scale = Vector2( 1.5, 1.5 )
tipo = 2

[node name="Joystick" parent="." instance=ExtResource( 9 )]
position = Vector2( 267.208, 919.227 )
[connection signal="jump" from="Saltar" to="." method="_on_Saltar_jump"]
[connection signal="shot" from="Disparar" to="." method="_on_Disparar_shot"]
[connection signal="action" from="Action" to="." method="_on_Action_action"]
[connection signal="idle" from="Joystick" to="." method="_on_Joystick_idle"]
[connection signal="move_left" from="Joystick" to="." method="_on_Joystick_move_left"]
[connection signal="move_rigth" from="Joystick" to="." method="_on_Joystick_move_rigth"]
